# fiduswriter-dhdconf

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
citationstyle/: build.sh
fiduswriter/dhdconf/: __init__.py  admin.py  app.py  app_settings.py  apps.py  middleware.py  models.py  package.json5  settings.py  urls.py  views.py
fiduswriter/dhdconf/citationstyle/: README.md  build.sh  dhdconf.csl  makejson.py
fiduswriter/dhdconf/conftool/: api.py  auth.py  importing.py  util.py
fiduswriter/dhdconf/document/: __init__.py  content.py  template.py
fiduswriter/dhdconf/document/data/: template.json
fiduswriter/dhdconf/locale/de/LC_MESSAGES/: django.mo  django.po  djangojs.mo  djangojs.po
fiduswriter/dhdconf/management/commands/: dhdconf_setup.py  jest.py
fiduswriter/dhdconf/management/data/: dhd_documenttemplate_content.json
fiduswriter/dhdconf/migrations/: 0001_initial.py  0002_alter_importlog_path_alter_importlog_request_id.py
fiduswriter/dhdconf/static/assets/: dhdconf.csljson
fiduswriter/dhdconf/static/css/: dhdconf.css  dhdconf_export_html.css
fiduswriter/dhdconf/static/js/modules/dhdconf/: app.js  citationstyle.js  config.js  document_overview.js  editor.js  exporter.js  menu.js  overviews.js
fiduswriter/dhdconf/static/js/modules/exporter/dhc/: index.js
fiduswriter/dhdconf/static/js/modules/exporter/tei/: README.md  bibliography.js  bibliography.test.js  checks.js  checks.test.js  citations.js  convert.js  convert.test.js  extract.js  index.js  (+4 more)
fiduswriter/dhdconf/static/js/plugins/app/: dhdconf.js
fiduswriter/dhdconf/static/js/plugins/bibliography_overview/: dhdconf.js
fiduswriter/dhdconf/static/js/plugins/documents_overview/: dhdconf.js
fiduswriter/dhdconf/static/js/plugins/editor/: dhdconf.js
fiduswriter/dhdconf/static/js/plugins/images_overview/: dhdconf.js
fiduswriter/dhdconf/static/js/plugins/menu/: dhdconf.js
fiduswriter/dhdconf/tests/: test_conftool_integration.py  test_dhdconf.py  test_dhdconf_ui.py
(+4 files in other folders)
