[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiduswriter-dhdconf"
description = "A Fidus Writer plugin to connect to Conftool organizing a DHD conference."
version = "0.1.0"
readme = "README.md"
# TODO: License
# license = {text = ""}
authors = [
  {email = "david.neugebauer@posteo.de", name = "David Neugebauer"},
  # TODO: Add J.G.?
]
classifiers=[
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

# TODO: Github Repo?
# [project.urls]
# repository = "https://github.com/fiduswriter/fiduswriter-pandoc"
