[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiduswriter-dhdconf"
description = "A Fidus Writer plugin used for DHD conference submissions."
version = "0.2.4"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
  {email = "david.neugebauer@posteo.de", name = "David Neugebauer"},
]
classifiers=[
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies=[
  "requests~=2.3"
]

[project.urls]
repository = "https://github.com/neuged/fiduswriter-dhdconf"
